--- a/settings.json
+++ b/settings.json
@@ -9,14 +9,14 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfcོ",
-	"ownername": "ZeeoneOfcོ",
-	"botname":"ALPHABOT",
+	"ownerNumber": "6282230397507",
+	"ownerNumberr": "6282230397507",
+	"cr": "@Melati Rinonceོ",
+	"ownername": "Dhen Bagus❦",
+	"botname":"Melati Rinonceོ",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
 	"donasi":"donasi.jpg",
-	"fake": " 「  ALPHABOT  」\nCreated By @ZeeoneOfcོ"
+	"fake": " 「  MELATI RINONCE  」\nCreated By @Melati Rinonceོ"
 }
