--- a/settings.json
+++ b/settings.json
@@ -14,9 +14,9 @@
 	"cr": "@Melati Rinonceོ",
 	"ownername": "Dhen Bagus❦",
 	"botname":"Melati Rinonceོ",
-	"thumb":"thumbnail_1.jpg",
-	"thumbnail":"thumbnail_2.jpg",
-	"fakethumb":"thumbnail_1.jpg", 
-	"donasi":"donasi.jpg",
+	"thumb":"haruka0.jpg",
+	"thumbnail":"thumbnail_6.jpg",
+	"fakethumb":"haruka0.jpg", 
+	"donasi":"donasi_1.jpg",
 	"fake": " 「  MELATI RINONCE  」\nCreated By @Melati Rinonceོ"
 }
